fix: inconsistent layout on small mobile

--- a/src/styles/home/home.css
+++ b/src/styles/home/home.css
@@ -17,7 +17,6 @@
   .product-flex {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     max-width: 300px;
     max-height: 500px;
   }
