--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -91,11 +91,19 @@
     .title {
       font-size: 1.5rem;
     }
+    .title--sm {
+      font-size: 1rem;
+    }
     .text--xl {
       font-size: 1.5rem;
     }
     .text--sm {
       font-size: 0.75rem;
+    }
+  }
+  @media (max-width: 400px) {
+    .title--sm {
+      font-size: 0.875rem;
     }
   }
 }
